feat: 中国語自動翻訳ページ (#1693)
* wip

* feat: add translated blog posts

Add a detailed post on mastering Go concurrency concepts with Mutex and Channel, including usage examples and comparisons. Also introduced a blog explaining PostgreSQL's CYCLE statement for safe recursive queries, complete with examples and practical use cases.

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -9,17 +9,7 @@ layout: layouts/base.njk
   <article class="post mr-auto ml-auto">
     <header class="post__header">
       <h1>{{ title }}</h1>
-      {%- if en %}
-      <div class="relative lg:fixed lg:bottom-5 lg:right-5 lg:bg-blue-900 lg:bg-opacity-50 lg:p-2 lg:rounded-md lg:shadow-lg cursor-pointer">
-        <a class="lg:text-white lg:text-center lg:block text-sm"
-           href="{{ en }}">Switch to English</a>
-      </div>
-      {% elif ja %}
-      <div class="relative lg:fixed lg:bottom-5 lg:right-5 lg:bg-blue-900 lg:bg-opacity-50 lg:p-2 lg:rounded-md lg:shadow-lg cursor-pointer">
-        <a class="lg:text-white lg:text-center lg:block text-sm"
-           href="{{ ja }}">日本語に切り替え</a>
-      </div>
-      {%- endif %}
+      {{ comp.LangSwitch({url: url, ja: ja, en: en, zh: zh}) | safe }}
       <div class="post__details">
         <time datetime="{{ date | htmlDateString }}">
           {{ date | readableDate }}
