--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-{%- set lang %}{% if translate == true %}en{% else %}ja{% endif %}{% endset -%}
-<html lang="{{ lang }}">
+{%- if lang == "en" -%}
+  {%- set langCode = "en" -%}
+{%- elif lang == "zh" -%}
+  {%- set langCode = "zh-CN" -%}
+{%- else -%}
+  {%- set langCode = "ja" -%}
+{%- endif -%}
+<html lang="{{ langCode }}">
 {%- set siteName %}{% if translate == true %}{{ meta.siteEnName }}{% else %}{{ meta.siteName }}{% endif %}{% endset -%}
 {%- set pageTitle %}{% if title %}{{ title }} | {% endif %}{{ siteName }}{% endset -%}
 {%- set pageDescription %}{% shortDesc search.pages(), page, meta.siteDescription %}{% endset -%}
@@ -48,7 +54,13 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    {%- if lang == "zh" -%}
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    {%- elif lang == "en" -%}
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    {%- else -%}
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Mochiy+Pop+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    {%- endif -%}
 
     <meta name="twitter:card" content="summary_large_image" />
     {% if meta.twitterUsername %}
