--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 ---
 {{ comp.SiteNav() | safe }}
 
-<header class="tdbc-hero">
+<header class="tdbc-hero" id="header">
   <div class="tdbc-container">
     <h1 class="text-mz tdbc-mb-none tdbc-page-title">
     {{ title }}
