--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -10,6 +10,10 @@ layout: layouts/base.njk
     <header class="post__header">
       <h1>{{ title }}</h1>
       {{ comp.LangSwitch({url: url, ja: ja, en: en, zh: zh}) | safe }}
+      <a href="#header" id="back-to-top" class="hidden fixed bottom-5 left-1/2 transform -translate-x-1/2 bg-blue-500 bg-opacity-50 text-white py-2 px-4 rounded-full shadow-md text-sm hover:bg-opacity-100 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2 z-50 transition-opacity duration-300">
+        Back to Top
+      </a>
+
       <div class="post__details">
         <time datetime="{{ date | htmlDateString }}">
           {{ date | readableDate }}
