fix: remove async attribute from site.js script tag
The async attribute was removed from the site.js script tag to ensure proper script execution order. This change prevents potential issues with dependencies or functionality relying on the script loading sequence.

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -142,6 +142,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/js/site.js" async></script>
+    <script type="module" src="/js/site.js"></script>
   </body>
 </html>
