chore: update user property theme to language in analytics
Replaced hardcoded 'light' theme with dynamic language code in the analytics user properties. This ensures accurate tracking of user language preferences.

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -35,7 +35,7 @@
       gtag('config', 'G-38XP4WXMMY', {
         'user_properties': {
           branch: '{{ meta.branch }}',
-          theme: 'light',
+          lang: '{{ langCode }}',
           author: '{{ author }}',
           translate: '{{ translate }}',
           tags: '{{ tags }}',
