feat: add SpringBanner component for seasonal event promotion
Introduce a new `SpringBanner` component to highlight the 2025 spring event. The banner is now displayed on the home and post layouts, along with associated styles and assets. This improves visibility for the seasonal campaign.

--- a/src/_includes/styles/_season.pcss
+++ b/src/_includes/styles/_season.pcss
@@ -21,7 +21,7 @@
     border: 1px solid grey;
     padding: 3px;
   }
-  li {
+  li:not(fieldset.page-ranking li) {
     list-style: none;
   }
   ul {
