Update algolia appId / apiKey

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -111,8 +111,8 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.js"></script>
 <script type="text/javascript">
   algoliasearchNetlify({
-    appId: 'O9JY8ZL25T',
-    apiKey: 'ad56ef1ad9d13a7d8abc9dea01a5a6de',
+    appId: 'DXUHI3EUVA',
+    apiKey: 'c9cb1f29bb5b10e740fd4b9c7a65d22d',
     siteId: '585ee948-cb8f-4598-a37f-e6304bfee394',
     branch: 'main',
     selector: 'div#search',
