--- a/src/_includes/styles/_post.pcss
+++ b/src/_includes/styles/_post.pcss
@@ -134,10 +134,10 @@
 /* 画像キャプション用スタイル */
 /* 画像の直後にあるemタグのみを対象にする */
 p:has(img) a:has(img) + br + em {
-  display: block !important;
-  margin: -1rem auto 0 !important;
-  line-height: 1.3 !important;
-  text-align: center !important;
-  color: #93a5b1 !important;
-  font-size: .95rem !important;
+  display: block;
+  margin: -1rem auto 0;
+  line-height: 1.3;
+  text-align: left;
+  color: #93a5b1;
+  font-size: .95rem;
 }
