--- a/src/_includes/styles/_post.pcss
+++ b/src/_includes/styles/_post.pcss
@@ -130,3 +130,14 @@
 .pswp__img {
   background-color: white;
 }
+
+/* 画像キャプション用スタイル */
+/* 画像の直後にあるemタグのみを対象にする */
+p:has(img) a:has(img) + br + em {
+  display: block;
+  margin: -1rem auto 0;
+  line-height: 1.3;
+  text-align: left;
+  color: #93a5b1;
+  font-size: .95rem;
+}
