feat: Prepare for HQ Website renewal

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -136,7 +136,7 @@
           <p class="tdbc-mb-none">&copy; {% year %} Mamezou Co.,Ltd.</p>
           <div style="text-align:right">
             <a href="https://www.mamezou.com/">
-              <img alt="豆蔵" width="40px" height="45px" src="/img/logo/mz-logo.png"/>
+              <img alt="豆蔵" width="40px" height="45px" src="/img/logo/mz-logo-white.png"/>
             </a>
           </div>
         </div>
