--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -41,7 +41,7 @@ layout: layouts/base.njk
       {{ comp.TagsLink() | safe }}
     </fieldset>
   </div>
-  <p class="m-2 text-base">本サイトは本家の豆蔵ホームページではありません。会社概要、製品紹介等は<a class="new-tab-link" target="_blank" rel="noreferrer noopener" style="text-decoration:underline" href="https://www.mamezou.com/">こちら</a>、
+  <p class="m-2 text-base">本サイトは本家の豆蔵ホームページではありません。会社概要、製品紹介等は<a class="new-tab-link" target="_blank" rel="noreferrer noopener" style="text-decoration:underline" href="https://mamezo.tech/">こちら</a>、
   募集中の求人情報は<a class="new-tab-link" target="_blank" rel="noreferrer noopener" style="text-decoration:underline" href="https://hrmos.co/pages/mamezou-recruit/jobs">こちら</a>をご覧ください。</p>
 
   <div>
