feat: Prepare for HQ Website renewal (#2153)
* feat: Prepare for HQ Website renewal

* Update links and footer logo

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -133,10 +133,10 @@
     <footer class="tdbc-background--secondary">
       <div class="tdbc-container tdbc-text-align-center">
         <div class="tdbc-row text-white mr-auto ml-auto" style="line-height: 50px">
-          <p class="tdbc-mb-none">&copy; {% year %} Mamezou Co.,Ltd.</p>
+          <p class="tdbc-mb-none">&copy; {% year %} MAMEZO Co.,Ltd.</p>
           <div style="text-align:right">
-            <a href="https://www.mamezou.com/">
-              <img alt="豆蔵" width="40px" height="45px" src="/img/logo/mz-logo.png"/>
+            <a href="https://mamezo.tech//">
+              <img alt="豆蔵" src="/img/logo/mz-logo-white.png"/>
             </a>
           </div>
         </div>
